--- a/WhereShouldWeMeet/WhereShouldWeMeet-Info.plist
+++ b/WhereShouldWeMeet/WhereShouldWeMeet-Info.plist
@@ -37,6 +37,8 @@
 	<string>MainStoryboard_iPhone</string>
 	<key>UIMainStoryboardFile~ipad</key>
 	<string>MainStoryboard_iPad</string>
+	<key>FacebookAppID</key>
+	<string>316475088442311</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
